Fix z-index

--- a/css/sections/main.css
+++ b/css/sections/main.css
@@ -15,6 +15,7 @@ main .opacity-header {
   opacity: 0.7;
   right: 0;
   top: 0;
+  z-index: 1000;
 }
 
 main nav#songs {
